[package]
name = "command"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cliclack = "0.1.6"
local-ip-address = "0.5.6"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.64"
toml = "0.8.8"
