[package]
name = "command"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = "none"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cliclack = "0.3.5"
local-ip-address = "0.6.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8.8"
